--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,21 @@
-<ng-container>
-  <div id="home">
-    <section>
-      <div>
-        <span class="mdi mdi-cube-outline cube"></span>
-      </div>
-      <h1>Quiz App</h1>
-      <div class="play-btn-container">
-        <ul>
-          <li>
-            <a
-              class="btn start-btn"
-              routerLink="/instructions"
-              routerLinkActive="active"
-              >Play</a
-            >
-          </li>
-        </ul>
-      </div>
-    </section>
-  </div>
-</ng-container>
+<div id="home">
+  <section>
+    <div>
+      <span class="mdi mdi-cube-outline cube"></span>
+    </div>
+    <h1>Dev Quiz</h1>
+    <p>Test your knowledge on Frontend.</p>
+    <div class="play-btn-container">
+      <ul>
+        <li>
+          <a
+            class="btn start-btn"
+            routerLink="/instructions"
+            routerLinkActive="active"
+            >Play</a
+          >
+        </li>
+      </ul>
+    </div>
+  </section>
+</div>
