--- a/src/app/instructions/instructions.component.css
+++ b/src/app/instructions/instructions.component.css
@@ -1,14 +1,23 @@
 .container {
-  background-color: var(--orange);
-  padding: 40px 0;
+  min-height: 100vh;
+  width: 100vw;
+  background: linear-gradient(
+    90deg,
+    rgba(247, 138, 3, 1) 0%,
+    rgba(255, 83, 4, 1) 100%
+  );
+  padding: 30px;
+  font-family: var(--montserrat);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 ul {
   list-style: disc;
 }
 
 .instructions {
-  width: 80%;
+  width: 60%;
   background-color: var(--white);
   margin: auto;
   padding: var(--lg);
@@ -20,20 +29,19 @@ ul {
 h1 {
   text-align: center;
   font-size: var(--md);
+  font-family: var(--lobster);
 }
 
 p {
   font-size: var(--sm);
   font-weight: 500;
+  font-family: var(--lobster);
+  text-align: center;
 }
 
 .browser-default {
   padding-left: 30px;
   margin-top: 10px;
-}
-
-.lifeline-icon {
-  color: var(--green);
 }
 
 .link-section {
