--- a/src/app/instructions/instructions.component.html
+++ b/src/app/instructions/instructions.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="instructions">
-    <h1>How to Play the Game</h1>
+    <h1><span class="mdi mdi-pencil mdi-20"></span> How to Play the Game</h1>
     <p>Ensure you read this guide from start to finish.</p>
     <ul class="browser-default" id="main-list">
       <li>
@@ -8,18 +8,10 @@
         elapses.
       </li>
       <li>Each game consists of 15 questions.</li>
-      <li>
-        Every question contains 4 options.
-        <img src="../../assets/img/option.png" alt="Quiz App option example" />
-      </li>
+      <li>Every question contains 4 options.</li>
       <li>
         Select the option which best answers the question by clicking (or
         selection) it.
-        <img src="../../assets/img/answer.png" alt="Quiz App answer example" />
-      </li>
-      <li>
-        Feel free to quit (or retire from) the game at any time. In that case
-        your score will be revealed afterwards.
       </li>
       <li>The timer starts as soon as the game loads.</li>
       <li>Let's do this if you think you've got what it takes?</li>
