--- a/src/app/quiz/quiz.component.css
+++ b/src/app/quiz/quiz.component.css
@@ -1,21 +1,15 @@
 .container {
-  background-color: var(--orange);
+  width: 100vw;
   height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
-
 .questions {
   width: 80%;
-  height: 450px;
+  margin: 0 auto;
   border-left: 5px solid var(--blue);
   background-color: rgba(255, 255, 255, 0.9);
   padding: var(--sm) var(--md);
-  margin: var(--lg) auto 0 auto;
   border-radius: 10px;
   box-shadow: 3px 7px 10px #555555;
-  position: relative;
 }
 
 h2 {
@@ -30,6 +24,19 @@ h5 {
   margin: 20px;
 }
 
+h4 {
+  font-size: var(--sm);
+  font-weight: 400;
+}
+
+.text-success {
+  color: var(--green);
+}
+
+.text-danger {
+  color: var(--red);
+}
+
 .timer-container p {
   margin-top: 30px;
   display: flex;
@@ -38,7 +45,7 @@ h5 {
 
 .option-grid {
   display: grid;
-  grid-template-columns: repeat(2, auto);
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   padding: 20px;
 }
@@ -48,6 +55,7 @@ h5 {
   padding: var(--sm);
   text-align: center;
   border-radius: 30px;
+  border: none;
   cursor: pointer;
   color: var(--white);
   outline: none;
@@ -59,9 +67,36 @@ h5 {
 }
 
 .button-container {
+  display: flex;
+  width: 50%;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #fff;
+  padding: 20px;
+  margin-top: 20px;
+  border-radius: 10px;
+}
+
+.start-container {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(
+    90deg,
+    rgba(247, 138, 3, 1) 0%,
+    rgba(255, 83, 4, 1) 100%
+  );
+}
+
+.book-owl {
   position: absolute;
-  bottom: 20px;
-  right: 70px;
+  width: 250px;
+  left: 300px;
 }
 
 .btn {
@@ -71,29 +106,42 @@ h5 {
   border: none;
   outline: none;
   padding: var(--xs) var(--sm);
-  margin-left: 10px;
 }
 
-.quit-btn {
-  background-color: var(--red);
+.displayAns {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  width: 70%;
+  text-align: center;
 }
 
 .next-btn {
-  background-color: var(--green);
-}
-
-.prev-btn {
   background-color: var(--blue);
 }
 
-.option.correct {
+.start-btn {
+  font-size: var(--sm);
+  padding: 20px;
+  background: linear-gradient(
+    90deg,
+    rgb(25, 247, 17) 50%,
+    rgb(2, 201, 26) 100%
+  );
+  border-radius: 5px;
+}
+
+.neutral {
+  background-color: var(--orange);
+}
+
+.correct {
   background-color: var(--green);
 }
 
-.option.wrong {
+.wrong {
   background-color: var(--red);
 }
 
-.option.disable-btn {
-  background-color: var(--text-color);
+.disable {
+  background-color: rgb(168, 168, 168);
 }
