--- a/src/app/result/result.component.css
+++ b/src/app/result/result.component.css
@@ -4,6 +4,20 @@
   align-items: center;
   flex-direction: column;
   height: 100vh;
+  width: 100vw;
+  background-image: url("../../assets/img/result-img.jpg");
+  background-size: cover;
+  position: relative;
+}
+
+.result-container::before {
+  content: "";
+  background-color: #000000ce;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .success-icon {
@@ -11,13 +25,24 @@
   font-size: var(--lg);
 }
 .container {
-  color: var(--text-color);
+  color: var(--white);
   line-height: 2;
+  z-index: 1;
+}
+
+h1 {
+  color: #fefeef;
+  z-index: 1;
 }
 
 h4 {
   font-size: var(--sm);
   text-align: center;
+  color: var(--orange);
+}
+
+.stat {
+  font-size: var(--sm);
 }
 
 h2 {
@@ -26,6 +51,14 @@ h2 {
   text-align: center;
 }
 
-.left {
-  margin-right: 30px;
+.link-section {
+  margin-top: var(--md);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+
+li a {
+  z-index: 100;
 }
