--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -24,7 +24,7 @@
     <h4>{{ remark }}</h4>
     <h2>Your Score: {{ score }}%</h2>
 
-    <table style="width: 350px">
+    <table>
       <tr>
         <td class="stat">Total number of questions:</td>
         <td>15</td>
